--- a/parametric-static/contact.html
+++ b/parametric-static/contact.html
@@ -1,20 +1,20 @@
 ﻿<!doctype html>
 <html lang="en">
 <head>
-<link rel="canonical" href="https://maestro-uchiha.github.io/my-new-asd-site/contact.html">
+<link rel="canonical" href="https://cloud-culture.replit.app/contact.html">
 
 <meta name="robots" content="index,follow">
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Contact Ace Ultra Premium | My ASD Site</title>
+  <title>Contact Ace Ultra Premium | Cloud Culture</title>
   <meta name="description" content="Premium My ASD Site | quality, reliability, trust.">
   <meta name="author" content="Maestro">
 <!-- Open Graph -->
-  <meta property="og:title" content="Contact Ace Ultra Premium | My ASD Site">
+  <meta property="og:title" content="Contact Ace Ultra Premium | Cloud Culture">
   <meta property="og:description" content="Premium My ASD Site | quality, reliability, trust.">
-<meta property="og:image" content="https://maestro-uchiha.github.io/my-new-asd-site/assets/img/og.jpeg">
+<meta property="og:image" content="https://cloud-culture.replit.app/assets/img/og.jpeg">
   <meta property="og:type" content="website">
 
   <!-- Twitter -->
@@ -37,12 +37,12 @@
   </script>
 
   <link rel="stylesheet" href="assets/css/style.css">
-<link rel="alternate" type="application/rss+xml"  title="My ASD Site RSS"  href="feed.xml">
-  <link rel="alternate" type="application/atom+xml" title="My ASD Site Atom" href="atom.xml">
+<link rel="alternate" type="application/rss+xml"  title="Cloud Culture RSS"  href="feed.xml">
+  <link rel="alternate" type="application/atom+xml" title="Cloud Culture Atom" href="atom.xml">
 </head>
 <body>
   <header>
-    <h1><a href="index.html">My ASD Site</a></h1>
+    <h1><a href="index.html">Cloud Culture</a></h1>
 
     <!-- Mobile toggle -->
     <button id="navToggle" class="nav-toggle"
@@ -90,7 +90,7 @@
       <a href="legal/terms.html">Terms</a> |
       <a href="sitemap.html">Sitemap</a>
     </p>
-    <p>&copy; 2025 My ASD Site. All rights reserved.</p>
+    <p>&copy; 2025 Cloud Culture. All rights reserved.</p>
   </footer>
 
   <!-- Single rectangular theme toggle -->
