asd: deploy to fly.io

--- a/parametric-static/404.html
+++ b/parametric-static/404.html
@@ -12,7 +12,7 @@
 <!-- Open Graph -->
   <meta property="og:title" content="404 | Not Found | Cloud Culture">
   <meta property="og:description" content="Premium My ASD Site | quality, reliability, trust.">
-<meta property="og:image" content="https://cloud-culture.replit.app/assets/img/og.jpeg">
+<meta property="og:image" content="https://cloud-culture.fly.dev/assets/img/og.jpeg">
   <meta property="og:type" content="website">
 
   <!-- Twitter -->
@@ -64,7 +64,7 @@
 
   <!-- KEEP CONTENT ON ONE LINE TO AVOID WHITESPACE GROWTH -->
   <main><h1>404 | Not Found</h1>
-    <p>That page doesn't exist. <a href="/my-new-asd-site/index.html">Return home</a>.</p></main>
+    <p>That page doesn't exist. <a href="/index.html">Return home</a>.</p></main>
 
   <footer>
     <p>
