--- a/parametric-static/search.html
+++ b/parametric-static/search.html
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html lang="en">
 <head>
-<link rel="canonical" href="https://cloud-culture.replit.app/search.html">
+<link rel="canonical" href="https://cloud-culture.fly.dev/search.html">
 
 <meta name="robots" content="index,follow">
 
@@ -14,7 +14,7 @@
 <!-- Open Graph -->
   <meta property="og:title" content="Search | Cloud Culture">
   <meta property="og:description" content="Premium My ASD Site | quality, reliability, trust.">
-<meta property="og:image" content="https://cloud-culture.replit.app/assets/img/og.jpeg">
+<meta property="og:image" content="https://cloud-culture.fly.dev/assets/img/og.jpeg">
   <meta property="og:type" content="website">
 
   <!-- Twitter -->
